# cuaoa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MANIFEST.in  README.md  install.sh  pyproject.toml
cuaoa/: .gitignore  CITATION.bib  Cargo.toml  README.md  build.rs
cuaoa/internal/: Makefile  compile_flags.txt
cuaoa/internal/include/: polynomial.hpp
cuaoa/internal/include/cuaoa/: brute_force.hpp  cuaoa.hpp  functions.hpp  handle.hpp  optimize.hpp
cuaoa/internal/include/kernel/: kernels.hpp
cuaoa/internal/include/wrapper/: brute_force.hpp  core.hpp  cuaoa.hpp  device_info.hpp  handle.hpp  optimize.hpp  polynomial.hpp
cuaoa/internal/src/: polynomial.cpp
cuaoa/internal/src/cuaoa/: brute_force.cu  cuaoa.cu  functions.cu  optimize.cpp
cuaoa/internal/src/kernel/: kernels.cu  reduce.cu
cuaoa/internal/src/wrapper/: brute_force.cpp  core.cpp  cuaoa.cpp  device_info.cpp  handle.cpp  optimize.cpp  polynomial.cpp
cuaoa/src/: core.rs  lib.rs  parameters.rs  prelude.rs  py_bindings.rs  random.rs
cuaoa/src/algorithms/: aoa.rs  bf.rs  cuaoa.rs  cubf.rs  mod.rs  polynomial.rs
cuaoa/src/bindings/: core.rs  mod.rs  polynomial.rs
cuaoa/src/bindings/cuaoa/: brute_force.rs  constants.rs  device_info.rs  expval.rs  gradients.rs  handle.rs  mod.rs  optimize.rs  sample.rs  statevector.rs
pycuaoa/: __init__.py  cuaoa.pyi  pyhandle.pyi
python/pycuaoa/: __init__.pyi  core.pyi  pycuaoa.pyi  utils.pyi
src/: brute_force.rs  core.rs  cuaoa.rs  handle.rs  lib.rs  pymodule.rs  utils.rs
src/pycuaoa/: __init__.py  __init__.pyi  cuaoa.pyi
