[build-system]
requires = ["maturin>=1.4,<2.0", "patchelf"]
build-backend = "maturin"

[project]
name = "pycuaoa"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "numpy == 1.26.4"
]
dev-dependencies = [
  "networkx == 3.2.1"
]

[tool.uv]
package = true
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.rs" },
  { file = "src/pycuaoa/**/*.pyi" },
  { file = "src/pycuaoa/**/*.py" }
]

[tool.maturin]
module-name = "pycuaoa._core"
python-packages = ["pycuaoa"]
python-source = "src"
include = [
  "src/pycuaoa/**/*.pyi", 
  "src/pycuaoa/**/*.py", 
  "src/pycuaoa/py.typed",
]
