[package]
name = "cuaoa"
version = "0.1.0"
build = "build.rs"
description = "CUAOA: A Novel CUDA-Accelerated Simulation Framework for the QAOA for Python"
readme = "README.md"
keywords = ["Quantum Computing", "Quantum Optimization", "QAOA", "Quantum Circuit Simulation"]
authors = ["Jonas Blenninger <jonas@blenninger.de>"]
repository = "https://github.com/jflxb/cuaoa"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = [ "rlib", "cdylib",]

[build-dependencies]
cc = "1.0.83"

[dependencies]
bitvec = "1.0.1"
cffi = "0.1.7"
ffi = "0.1.1"
libc = "0.2.153"
num = "0.4.1"
rand = "0.8.5"

[dependencies.pyo3]
version = "0.23.4"
features = [ "num-complex", "extension-module", "auto-initialize",]
optional = true

[dependencies.numpy]
version = "0.23.0"
optional = true

[features]
py = ["pyo3", "numpy"]
